--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    outline: 1px solid red;
+    /*outline: 1px solid red;*/
 }
 
 @font-face {
@@ -16,7 +16,7 @@
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
+    height: 100vh;
 }
 
 .container { 
@@ -28,10 +28,6 @@ body {
 .header {
     background-color: #e0f2fe;
     grid-column: 2; 
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
     font: 'charis-bold', Verdana;
     
     display: grid;
@@ -43,29 +39,44 @@ body {
     display: flex;
     gap: 20px;
     margin: 20px;
+    align-items: center;
 }
 
 .searchbar input[type="text"] {
     border-radius: 5px;
     width: 600px;
-    height: 20px;
+    height: 15px;
+    padding: 5px;
     border: 1px solid rgb(241, 241, 241);
-    background-color: rgb(241, 241, 241);
+    background-color: rgb(255, 255, 255);
 }
 
 img {
     width: 40px;
     height: 40px;
     border-radius: 20px;
+    border-color: white;
+}
+
+img:hover {
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+}
+
+.notifications:hover {
+    height: 20px;
+    cursor: pointer;
 }
 
 .profile {
     display: flex;
     gap: 20px;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
-    margin: 0 20px;
     grid-column: 2;
+    margin: 10px 20px;
 }
 
 .profile-pic > img {
@@ -92,7 +103,8 @@ p:last-child {
 
 .buttons {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
+    align-items: center;
     margin: 20px;
 }
 
@@ -107,7 +119,7 @@ p:last-child {
 }
 
 button:hover {
-    background-color: rgb(108, 108, 108);
+    background-color: #0284c7;
 }
 
 .name {
@@ -119,13 +131,41 @@ button:hover {
     background-color: #0c4a6e;
     grid-row: 1/4;
     color: white;
+    
 }
 
 .sidebar ul,
 .sidebar li {
    list-style: none;
+   
 }
 
+.sidebar > .dashboard {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+    margin-bottom: 60px;
+    gap: 10px;
+}
+
+.home, .perfil, .messages, .history, .task, .community,
+.settings, .support, .privacy {
+    display: flex;  
+    align-items: center;
+    margin: 20px;
+    gap: 10px;
+}
+
+.configuration {
+    margin-top: 200px;
+}
+
+ul:hover {
+    padding: 10px;
+    background-color: #0369a1;
+    cursor: pointer;
+}
 .wrapper {
     background-color: white;
 }
