--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ body {
     display: grid; 
     grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 5fr;
+    height: 100%;
+    box-sizing: border-box;
 }
 
 .header {
@@ -172,7 +174,7 @@ ul:hover {
     background-color: #f7f7f7;
     display: grid;
     gap: 20px;
-    grid-template-columns: 6fr 1fr;
+    grid-template-columns: 5fr 1fr;
 }
 
 .right {
@@ -181,7 +183,7 @@ ul:hover {
     flex-direction: column;
     align-items: flex-end;
     margin: 30px;
-    
+    padding-left: 15px;
 }
 
 .box, .box-two {
@@ -228,7 +230,7 @@ hr {
 
 .trending {
     grid-column: 2;
- }
+}
 
 .perfiles {
     color: white;
@@ -247,5 +249,54 @@ hr {
 
 .description {
     font-size: 0.8rem;
+    padding-top: 5px;
+}
+
+.projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 15px; 
+    padding: 0px 20px 10px 20px;
+}
+
+.projects .card {
+    background-color: #e0f2fe;
+    border-radius: 15px;
+    height: 230px;
+    display: grid; 
+}
+
+.card p {
+    font-size: 14px;
+    padding: 0px 20px 0px 30px; 
+}
+
+.card .title {
+    font-size: 15px;
+    font-weight: bold;
+    padding-top: 25px;
+    padding-left: 30px;
+}
+
+.cards h2 {
+    padding: 40px 0px 12px 20px;
+    font-size: 20px;
+}
+
+.vl {
+    border-left:10px solid #0c4a6e;
+    height: 230px;
+    position: absolute;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+.svg {
+    justify-self: end;
+    padding-right: 20px; 
+}
+
+.svg:hover {
+    cursor: pointer;
 }
 
